force-app/main/default/objects/Payment_Receipt__c/fields/Cheque_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Received Date</label>
    <type>Date</type>
</CustomField>