force-app/main/default/objects/Payment_Receipt__c/fields/Particulars__c.field-meta.xml
<CustomField>
    <fullName>Particulars__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Particulars</label>
    <type>TextArea</type>
</CustomField>